--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: cimg/python:3.10
+      - image: cimg/python:3.11
     steps:
       - checkout
       - run:
@@ -11,7 +11,7 @@ jobs:
           command: pip install -r requirements.txt
       - run:
           name: Run tests
-          command: pytest --cov=src --cov-report=xml tests/
+          command: pytest tests/ --junitxml=test-results/junit.xml --cov=src --cov-report=xml
       - store_test_results:
           path: test-results/
       - store_artifacts:
