--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,53 @@
 version: 2.1
 
 jobs:
-  test:
-    parallelism: 4
+  build:
+    working_directory: /tmp
     docker:
       - image: cimg/python:3.11
     steps:
       - checkout
+
       - run:
           name: Install dependencies
           command: pip install -r requirements.txt
+
       - run:
           name: Run tests
           command: |
             mkdir -p test-results
-            nose2 --plugin=nose2.plugins.junitxml --junit-xml-path=test-results/junit.xml --with-coverage
+            nose2 --plugin=nose2.plugins.junitxml --junit-xml-path=test-results/junit.xml --with-coverage tests/
+
       - run:
-          name: List test-results directory
-          command: ls -la test-results/
-      - run:
-          name: Change permissions
-          command: chmod -R 755 test-results/
+          name: Generate coverage report
+          command: |
+            coverage xml -o coverage.xml
+
       - store_test_results:
           path: test-results/
+
       - store_artifacts:
-          path: coverage_html
-          destination: coverage-html-report
+          path: test-results/junit.xml
+          destination: test-results
+
+      - store_artifacts:
+          path: coverage.xml
+          destination: coverage-report
+
+      - store_artifacts:
+          path: /tmp/artifacts
+          destination: custom-artifacts
+
+      - run:
+          name: Create custom artifacts
+          command: |
+            echo "This is a custom artifact file" > /tmp/artifacts/custom-artifact-1.txt
+            mkdir -p /tmp/artifacts/subdir
+            echo "This is another artifact in a subdirectory" > /tmp/artifacts/subdir/custom-artifact-2.txt
+
+      - store_artifacts:
+          path: /tmp/artifacts
+          destination: custom-artifacts
 
   code_quality:
     docker:
