--- a/src/components/logger/pyproject.toml
+++ b/src/components/logger/pyproject.toml
@@ -1,52 +1,45 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "logger"
 version = "0.1.0"
-description = "Logger component for recording operations"
-readme = "README.md"
+description = "Logger component for recording operations performed by the calculator."
+license = { file = "LICENSE" }
 requires-python = ">=3.11"
-authors = [
-    { name = "Your Name", email = "your.email@example.com" }
-]
-dependencies = []
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[project.optional-dependencies]
-test = [
-    "pytest>=7.0.0",
-    "pytest-cov>=4.0.0",
+dependencies = [
+    "pytest",
+    "ruff",
+    "mypy",
+    "coverage",
+    "uv",
+    "logging"
 ]
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+
+[tool.mypy]
+strict = true
+disallow_untyped_defs = true
+
+[tool.coverage.run]
+branch = true
+source = ["logger"]
+
+[tool.coverage.report]
+show_missing = true
+fail_under = 80
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["logger"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-python_files = ["test_*.py"]
-addopts = "-v --cov"
 
-[tool.mypy]
-python_version = "3.11"
-strict = true
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-
-[tool.ruff]
-target-version = "py311"
-line-length = 88
-select = [
-    "E",   # pycodestyle errors
-    "W",   # pycodestyle warnings
-    "F",   # pyflakes
-    "B",   # flake8-bugbear
-    "I",   # isort
-    "C4",  # flake8-comprehensions
-    "UP",  # pyupgrade
-]
-ignore = []
-
-[tool.ruff.isort]
-known-first-party = ["logger"]
-
-[project.urls]
-repository = "https://github.com/yourusername/python-template-repo"
+[tool.uv]
+index-url = "https://pypi.org/simple"
