--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,5 +36,5 @@ dev = [
 ]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
