--- a/nose2.cfg
+++ b/nose2.cfg
@@ -4,3 +4,7 @@ plugins = nose2.plugins.junitxml
 
 [junit-xml]
 path = test-results/junit.xml
+# Ensure test suite names are compatible with CircleCI
+test_fullname = True
+# Add more details in the XML output
+test_properties = True
