Added api.py files, moved dependencies to pyproject.toml, and removed requirements.txt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,17 @@
+[projects]
+dependencies = [
+    "pytest"
+    "pytest-cov"
+    "ruff"
+    "mypy"
+    "uv"
+    "nose2[coverage_plugin]"
+    "coverage"
+    "black"
+    "flake8"
+    "bandit"
+]
+
 [tool.ruff]
 line-length = 88
 target-version = "py311"
