--- a/nose2.cfg
+++ b/nose2.cfg
@@ -1,10 +1,10 @@
 [unittest]
-plugins = nose2.plugins.junitxml
-          nose2.plugins.coverage
+plugins = nose2.plugins.junitxml,nose2.plugins.coverage
 
 [junit-xml]
 path = test-results/junit.xml
-# Ensure test suite names are compatible with CircleCI
-test_fullname = True
-# Add more details in the XML output
-test_properties = True
+test_fullname = True  # Ensures full test names in CircleCI reports
+
+[coverage]
+always-on = True  # Ensures coverage runs for every test execution
+omit = */tests/*
