--- a/nose2.cfg
+++ b/nose2.cfg
@@ -1,5 +1,6 @@
 [unittest]
-plugins = nose2.plugins.junitxml,nose2.plugins.coverage
+plugins = nose2.plugins.junitxml
+          nose2.plugins.coverage
 
 [junit-xml]
 path = test-results/junit.xml
