--- a/nose2.cfg
+++ b/nose2.cfg
@@ -8,4 +8,7 @@ test_fullname = True  # Ensures full test names in CircleCI reports
 
 [coverage]
 always-on = True  # Ensures coverage runs for every test execution
+coverage = src  # Explicitly specify what to measure
+coverage-report = term
+coverage-config = .coveragerc
 omit = */tests/*
