--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,15 +48,25 @@ jobs:
           command: |
             mkdir -p test-results
             echo "Running tests with nose2..."
-            nose2 -v --junit-xml-path=test-results/junit.xml
+            COVERAGE_FILE=.coverage nose2 -v --with-coverage --junit-xml-path=test-results/junit.xml
             echo "\nChecking test results directory:"
             ls -la test-results/ || echo "Test results directory is empty"
+            echo "\nChecking for coverage data:"
+            ls -la .coverage || echo "No coverage data found"
 
       - run:
           name: Generate coverage reports
           command: |
-            coverage xml -o test-results/coverage.xml
-            coverage html -d test-results/coverage-html
+            echo "Generating coverage reports..."
+            if [ -f .coverage ]; then
+              coverage report -m
+              coverage xml -o test-results/coverage.xml
+              coverage html -d test-results/coverage-html
+            else
+              echo "No coverage data found (.coverage file missing)"
+              mkdir -p test-results/coverage-html
+              echo "<html><body><h1>No coverage data collected</h1></body></html>" > test-results/coverage-html/index.html
+              echo "<?xml version='1.0' encoding='utf-8'?><coverage></coverage>" > test-results/coverage.xml
 
       - store_test_results:
           path: test-results/
