--- a/nose2.cfg
+++ b/nose2.cfg
@@ -8,7 +8,10 @@ test_fullname = True  # Ensures full test names in CircleCI reports
 
 [coverage]
 always-on = True  # Ensures coverage runs for every test execution
-coverage = src  # Explicitly specify what to measure
-coverage-report = term
+coverage = src
+coverage-report = term xml
 coverage-config = .coveragerc
 omit = */tests/*
+
+[discovery]
+start-dir = src
